--- a/staff/groups/over-cook-sa/overcooked/style/index.css
+++ b/staff/groups/over-cook-sa/overcooked/style/index.css
@@ -120,7 +120,6 @@ main {
 }
 
 .random-content {
-  display: block;
   padding: 0 20px 20px 20px;
   margin: 60px auto;
   box-shadow: 0 4px 6px #bbb;
@@ -133,15 +132,12 @@ main {
   height: 70vw;
   font-size: 15px;
 }
+.random-content__recipe {
+  color: #4091cc;
+}
 
 .random-content h3 {
   font-size: 12px;
-}
-
-.random-recipe {
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-content: center;
 }
 
 .recipe-video {
@@ -326,7 +322,7 @@ main {
   flex-direction: column;
   text-align: center;
   margin-top: 1rem;
-  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  border-top: 0;
 }
 .wrapper__title {
   padding-top: 1rem;
@@ -343,6 +339,17 @@ main {
 
 .fav-text {
   font-size: 12px;
+}
+
+.ingredients-cont {
+  display: grid;
+}
+.ingredients-cont__ingredients {
+  padding: 10px;
+}
+
+.ingredients-title {
+  padding: 10px 0 0 0;
 }
 
 .descText {
