fav button and icon

--- a/staff/groups/alf-&-co/app/components/landing/index.sass
+++ b/staff/groups/alf-&-co/app/components/landing/index.sass
@@ -23,7 +23,7 @@ main
 
 .icons-header
     display: flex
-    width: 50px
+    width: 70px
     position: absolute
     right: 0
     top: 10px
@@ -33,17 +33,18 @@ main
         align-items: right
         list-style-type: none
         right: 10px
-        margin: 5px
+        margin: 15px
     li
         height: 25px
         list-style-type: none
         padding: 0
-        margin: 20px 2px
+        margin: 20px 15px
     li,
     a,
     img
         text-decoration: none
-        width: 55%
+        width: 60%
+        top: 20px
         font-size: 1.5rem
         color: $color-black
         text-transform: uppercase
@@ -51,7 +52,8 @@ main
         &:hover 
             color: $color-green-clair 
     img
-        margin: 12px 2px
+        margin: 0 auto
+        padding-top: 10px
         
 
 
