--- a/staff/groups/alf-&-co/app/style/index.css
+++ b/staff/groups/alf-&-co/app/style/index.css
@@ -38,7 +38,7 @@ main {
 
 .icons-header {
   display: flex;
-  width: 50px;
+  width: 70px;
   position: absolute;
   right: 0;
   top: 10px;
@@ -49,19 +49,20 @@ main {
   align-items: right;
   list-style-type: none;
   right: 10px;
-  margin: 5px;
+  margin: 15px;
 }
 .icons-header li {
   height: 25px;
   list-style-type: none;
   padding: 0;
-  margin: 20px 2px;
+  margin: 20px 15px;
 }
 .icons-header li,
 .icons-header a,
 .icons-header img {
   text-decoration: none;
-  width: 55%;
+  width: 60%;
+  top: 20px;
   font-size: 1.5rem;
   color: #000000;
   text-transform: uppercase;
@@ -73,7 +74,8 @@ main {
   color: #00ffa6;
 }
 .icons-header img {
-  margin: 12px 2px;
+  margin: 0 auto;
+  padding-top: 10px;
 }
 
 .menuToggle {
@@ -454,7 +456,7 @@ form textareatextarea:focus {
   align-items: center;
   height: 100%;
   margin: 10px auto;
-  margin-top: 60px;
+  margin-top: 45px;
   flex-direction: row;
   background-color: #1f1f1f;
 }
@@ -487,8 +489,6 @@ form textareatextarea:focus {
 }
 .panelDetail__title {
   margin-top: 60px;
-
-
 }
 .panelDetail__director, .panelDetail__mainCast {
   border: none;
@@ -524,7 +524,7 @@ form textareatextarea:focus {
   height: 30px;
   opacity: 1;
   color: #f7f7f7;
-  z-index: 7;
+  z-index: 2;
 }
 .fav:not([disabled]):hover, .fav:not([disabled]):focus {
   outline: none;
@@ -537,8 +537,6 @@ form textareatextarea:focus {
 .fav[disabled] {
   cursor: not-allowed;
 }
-
-
 
 .panelImage {
   display: flex;
@@ -554,35 +552,21 @@ form textareatextarea:focus {
   opacity: 0.7;
 }
 
-
 .close__detail--detail {
   position: absolute;
   right: 10px;
   width: 30px;
   top: 170px;
-
-.close__detail {
-  position: absolute;
-  right: 10px;
-  top: 140px;
-  width: 30px;
-
   height: 30px;
   opacity: 1;
   color: #f7f7f7;
-  z-index: 7;
+  z-index: 2;
 }
-
 .close__detail--detail:hover {
   opacity: 0.2;
   color: #c6c6c6;
 }
-
-.close__detail:hover {
-  opacity: 0.2;
-  color: #c6c6c6;
-}
-.close__detail:before, .close__detail:after {
+.close__detail--detail:before, .close__detail--detail:after {
   position: absolute;
   left: 10px;
   content: " ";
@@ -591,16 +575,10 @@ form textareatextarea:focus {
   background-color: #f7f7f7;
   opacity: 1;
 }
-
 .close__detail--detail:before {
   transform: rotate(45deg);
 }
 .close__detail--detail:after {
-
-.close__detail:before {
-  transform: rotate(45deg);
-}
-.close__detail:after {
   transform: rotate(-45deg);
 }
 
@@ -854,7 +832,6 @@ form textareatextarea:focus {
   width: 1.2rem;
   height: 1.2rem;
 }
-
 .close__detail {
   position: absolute;
   right: 10px;
@@ -884,7 +861,6 @@ form textareatextarea:focus {
 .close__detail:after {
   transform: rotate(-45deg);
 }
-
 
 ul {
   display: grid;
@@ -942,29 +918,28 @@ li {
   border: none;
   cursor: pointer;
   appearance: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 h3 {
   font: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
-.feedback--error, .feedback--success, .mosaicInfo__title, .mosaicInfo__date, .panelDetail__director, .panelDetail__mainCast, .panelDetail__description, .panelDetail__date, .panelDetail__title, .panelDetail__vote, .panelDetail__director--name, .panelDetail__mainCast--name, .panelDetail__description--description, .button {
+.feedback--error, .feedback--success, .registered-name, .mosaicInfo__title, .mosaicInfo__date, .panelDetail__director, .panelDetail__mainCast, .panelDetail__description, .panelDetail__date, .panelDetail__title, .panelDetail__vote, .panelDetail__director--name, .panelDetail__mainCast--name, .panelDetail__description--description, .button {
   font-size: 0.8rem;
   text-decoration: none;
   font-weight: 200;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
-
-.menuToggle a, .registered-name, .container_image p, form, form input, .search-bar, .mosaicInfo__vote, .big-letter, .button {
+.menuToggle a, form, form input, .search-bar, .mosaicInfo__vote, .big-letter, .form-panel, .form-panel input, .button, .container_image p {
   font-size: 1rem;
   text-decoration: none;
   font-weight: 200;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
-.container_image .title_collection, .modal-inner__title {
+.modal-inner__title, .container_image .title_collection {
   font-size: 1.3rem;
   text-decoration: none;
   font-weight: 500;
