--- a/staff/groups/esputy-corp/esputyfu/components/footer/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/footer/index.sass
@@ -4,6 +4,7 @@
     bottom: 0px
     color: white
     text-align: center
+    padding: 10px
     &__title
         font-family: "Playfair Display", serif
         font-size: 14px
