--- a/staff/groups/esputy-corp/esputyfu/components/track-detail/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/track-detail/index.sass
@@ -1,6 +1,6 @@
 .container__img
     width:100%
-    max-width:600px
+    max-width:700px
     margin-left: auto
     margin-right: auto
     
@@ -8,12 +8,16 @@
 .container__ul--detail
     list-style: none 
     color: white
+    padding: 0
    
     
 .container__a
     color: white
     text-decoration: none
     margin-left: 10px
+
+.container__a:visited
+    color: white
 .fa
     font-size: 28px
     display: block
@@ -32,3 +36,5 @@
     margin-right: auto
     margin-top: 20px
     margin-bottom: 20px
+.fa-external-link
+    font-size: 0.8rem
