--- a/staff/groups/over-cook-sa/overcooked/style/index.css
+++ b/staff/groups/over-cook-sa/overcooked/style/index.css
@@ -1,6 +1,7 @@
 * {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  max-width: 400px;
+  margin: auto;
 }
 
 .hide {
@@ -20,9 +21,8 @@
 }
 
 body {
-  width: 100vw;
   display: flex;
-  height: 100vh;
+  background: black;
 }
 
 input {
@@ -32,14 +32,10 @@ input {
 }
 
 select, button {
-  margin: 0.5rem;
   text-align: center;
   padding-top: 0.4rem;
-  align-content: space-around;
   text-decoration: none;
   font-size: 0.7rem;
-  margin-top: 1rem;
-  align-self: center;
   border: none;
   font-weight: bold;
   background-color: #4091cc;
@@ -48,7 +44,6 @@ select, button {
 
 a {
   text-decoration: none;
-  padding-top: 0 !important;
 }
 
 ul {
@@ -63,7 +58,6 @@ li {
 
 main {
   display: grid;
-  grid-template-rows: 40% 40% 20%;
 }
 
 .landing-logo {
@@ -77,6 +71,14 @@ main {
   height: 100vh;
 }
 
+.cat_cont {
+  margin-top: 6.8rem;
+  background-image: url("https://i.pinimg.com/originals/85/5d/c4/855dc497dea9484967fb13036b8d7767.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 .landingButton {
   background-color: rgba(91, 177, 222, 0.8);
 }
@@ -85,11 +87,11 @@ main {
   display: flex;
   padding-top: 1%;
   width: 100vw;
-  margin: 0 0 0 0;
+  margin: 1.5rem 0 0 0;
 }
 .landingContainer_container {
   padding: 1vw;
-  margin: 2rem auto;
+  margin: auto;
 }
 
 .landingContainer li {
@@ -121,7 +123,8 @@ main {
 
 .random-content {
   padding: 0 20px 20px 20px;
-  margin: 60px auto;
+  margin: auto;
+  margin-top: 2.5rem;
   box-shadow: 0 4px 6px #bbb;
   background-color: rgba(255, 255, 255, 0.6);
   border-radius: 3px;
@@ -131,9 +134,11 @@ main {
   width: 80vw;
   height: 70vw;
   font-size: 15px;
+  text-align: center;
 }
 .random-content__recipe {
   color: #4091cc;
+  padding-top: 0.5rem;
 }
 
 .random-content h3 {
@@ -142,7 +147,7 @@ main {
 
 .recipe-video {
   border-radius: 10px;
-  width: 100%;
+  width: 70%;
   height: 70%;
   margin: 20px auto;
 }
@@ -152,7 +157,6 @@ main {
   top: 0;
   width: 100%;
   padding-top: 2rem;
-  background-image: url(img/fondo-landing.png);
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
@@ -203,6 +207,7 @@ main {
   font-size: 0.8rem;
   bottom: 0;
   margin-top: 2rem;
+  position: fixed;
 }
 
 .footer-sMedia {
@@ -248,27 +253,42 @@ main {
   padding: 1rem;
 }
 
+.loginForm input {
+  height: 1rem;
+  padding: 0.3rem;
+}
+
 .btnGo {
-  align-self: center;
   border: none;
-  font-weight: bold;
   background-color: rgba(91, 177, 222, 0.8);
   color: white;
+  height: 2rem;
+  max-width: 4rem;
+  min-width: 4rem;
+  border-radius: 4px;
+  font-size: 0.7rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  align-self: center;
+  padding-top: 0;
+  box-shadow: 0 4px 6px #bbb;
+  margin-top: 0.5rem;
 }
 
 .backButton {
   text-align: center;
   padding-top: 0.4rem;
-  align-content: space-around;
   text-decoration: none;
   font-size: 0.7rem;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   align-self: center;
   border: none;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
   background-color: rgba(91, 177, 222, 0.8);
   color: white !important;
+  width: 3rem;
+  max-width: 3rem;
 }
 
 .homeHeader {
@@ -277,63 +297,70 @@ main {
 }
 
 .headerButton {
-  text-align: center;
-  padding: 0.4rem;
-  align-content: space-around;
-  text-decoration: none;
   font-size: 0.7rem;
-  margin-top: 1rem;
-  margin-left: 0.2rem;
-  align-self: center;
-  border: none;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
-  background-color: #4091cc;
   color: white;
-  width: 1rem;
+}
+
+.home-categories {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.smallHeader-buttons {
+  height: 1.5rem;
+  margin-top: -0.3rem;
+  justify-content: center;
 }
 
 .user {
   display: flex;
+  justify-content: center;
+}
+
+.homeHeader {
+  background-color: #4091cc;
+}
+
+.Search-button, select, .headerButton {
+  background: none !important;
 }
 
 .home-welcome {
   margin-bottom: 0.5rem;
   color: white;
   margin: 0;
-}
-
-.user-welcome {
+  display: none;
   background-color: #4091cc;
-  opacity: 0.8;
-  border-radius: 2px;
-  width: 30vw;
 }
 
 .search {
-  margin-top: 1.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.cat_cont {
-  margin-bottom: 2rem;
-  margin-top: 12rem;
-}
-
-.catPasta {
-  border-top: 0 !important;
+  height: 2rem;
 }
 
 .catTitle {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  background-color: rgba(64, 145, 204, 0.8);
+  color: white !important;
   text-align: center;
   color: #4091cc;
-  margin: 1rem;
-  border-top: 1px solid rgba(0, 0, 0, 0.3);
-  padding-top: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .cat-img {
   width: 100vw;
+}
+
+.catSlim {
+  margin: 1rem 0rem 1rem 0rem;
+}
+
+.catLast {
+  margin-bottom: 2rem;
 }
 
 .wrapper {
@@ -342,20 +369,26 @@ main {
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin-top: 1rem;
   border-top: 0;
+  background-image: url("https://i.pinimg.com/originals/85/5d/c4/855dc497dea9484967fb13036b8d7767.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 .wrapper__title {
   padding-top: 1rem;
 }
 
-.wrapper-cont {
-  margin-top: 12rem;
+.wrapper_cont {
+  margin-top: 6.8rem;
+}
+
+.favorites {
+  margin-top: 6.8rem;
 }
 
 .wrapper__img {
   margin-top: 1rem;
-  width: 100vw;
 }
 
 .fav-text {
@@ -381,6 +414,16 @@ main {
 
 .home-logo {
   width: 100vw;
+}
+
+.fab {
+  padding-left: 0.5rem;
+  padding-top: 0.3rem;
+}
+
+.recipe-video {
+  width: 99vw;
+  height: 300px;
 }
 
 /*# sourceMappingURL=index.css.map */
