--- a/staff/groups/over-cook-sa/overcooked/style/index.sass
+++ b/staff/groups/over-cook-sa/overcooked/style/index.sass
@@ -1,6 +1,7 @@
 *
-  margin: 0
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  max-width: 400px
+  margin: auto
   
 .hide
   display: none
@@ -15,9 +16,8 @@
   color: green
 
 body 
-  width: 100vw
-  display: flex 
-  height: 100vh
+  display: flex
+  background: black
 
 input
   border: 0.09rem solid rgba(0,0,0,0.3)
@@ -25,14 +25,10 @@ input
   opacity: 0.8
  
 select, button
-    margin: 0.5rem
     text-align: center
     padding-top: 0.4rem
-    align-content: space-around
     text-decoration: none
     font-size: 0.7rem
-    margin-top: 1rem
-    align-self: center
     border: none
     font-weight: bold
     background-color: #4091cc
@@ -40,8 +36,6 @@ select, button
 
 a
     text-decoration: none
-    padding-top: 0 !important
-
 
 ul 
   padding: 0
@@ -53,18 +47,22 @@ li
 
 main
   display: grid
-  grid-template-rows: 40% 40% 20%
 
 .landing-logo 
   display: flex
   width: 100vw
 
-
-
 .backgroundLan
   background-image: url(img/fondo-landing.png)
   background-size: cover
   height: 100vh
+
+.cat_cont
+  margin-top: 6.8rem
+  background-image: url('https://i.pinimg.com/originals/85/5d/c4/855dc497dea9484967fb13036b8d7767.jpg')
+  background-size: cover
+  background-repeat: no-repeat
+  background-attachment: fixed
 
 
 .landingButton
@@ -74,25 +72,25 @@ main
   display: flex
   padding-top: 1%
   width: 100vw
-  margin: 0 0 0 0
+  margin: 1.5rem 0 0 0
   
   &_container
     padding: 1vw
-    margin: 2rem auto
+    margin: auto
 
 .landingContainer li 
     margin: 2vw
     
 
 .landingContainer a 
-    color: white !important
-    text-decoration: none
-    font-size: 0.8em
-    color: black
-    font-weight: bolder
-    border-radius: 6px
-    box-shadow: 0 4px 6px #bbb
-    padding: 0.5rem
+  color: white !important
+  text-decoration: none
+  font-size: 0.8em
+  color: black
+  font-weight: bolder
+  border-radius: 6px
+  box-shadow: 0 4px 6px #bbb
+  padding: 0.5rem
  
 
 .landingContainer label
@@ -106,31 +104,31 @@ main
   
 
 .random-content
-  
-    padding: 0 20px 20px 20px
-    margin: 60px auto
-    box-shadow: 0 4px 6px #bbb
-    background-color: rgba(255, 255, 255, 0.6)
-    border-radius: 3px
-    -moz-border-radius: 3px
-    -webkit-border-radius: 3px
-    padding: 10px
-    width: 80vw
-    height: 70vw
-    font-size: 15px
+  padding: 0 20px 20px 20px
+  margin: auto
+  margin-top: 2.5rem
+  box-shadow: 0 4px 6px #bbb
+  background-color: rgba(255, 255, 255, 0.6)
+  border-radius: 3px
+  -moz-border-radius: 3px
+  -webkit-border-radius: 3px
+  padding: 10px
+  width: 80vw
+  height: 70vw
+  font-size: 15px
+  text-align: center
 
-    &__recipe 
-      color: #4091cc
-
+  &__recipe 
+    color: #4091cc
+    padding-top: 0.5rem
 
 
 .random-content h3
     font-size: 12px
-
   
 .recipe-video 
     border-radius: 10px
-    width: 100%
+    width: 70%
     height: 70%
     margin: 20px auto
 
@@ -139,59 +137,59 @@ main
     top: 0
     width: 100%
     padding-top: 2rem
-    background-image: url(img/fondo-landing.png)
     border-bottom: 1px solid rgba(0,0,0,0.3)
 
 .footer
-    background-color: rgb(163, 15, 50)
-    display: flex
-    align-content: flex-end
-    flex-wrap: wrap
-    justify-content: space-evenly
-    align-items: baseline
-    color: white
-    width: 100vw
-    font-size: 0.8rem
-    position: absolute
-    bottom: 0
+  background-color: rgb(163, 15, 50)
+  display: flex
+  align-content: flex-end
+  flex-wrap: wrap
+  justify-content: space-evenly
+  align-items: baseline
+  color: white
+  width: 100vw
+  font-size: 0.8rem
+  position: absolute
+  bottom: 0
 
 .register-succes
-    display: grid
+  display: grid
+  box-shadow: 0 4px 6px #bbb
+  background-color: rgba(255, 255, 255, 0.6)
+  border-radius: 3px
+  -moz-border-radius: 3px
+  -webkit-border-radius: 3px
+  margin: 5rem 2rem 0 2rem
+  padding: 10px
+  font-size: 15px
+
+  &__login
     box-shadow: 0 4px 6px #bbb
-    background-color: rgba(255, 255, 255, 0.6)
+    background-color: rgba(123, 239, 178, 0.7)
+    padding: 5px 5px 5px 5px
     border-radius: 3px
     -moz-border-radius: 3px
     -webkit-border-radius: 3px
-    margin: 5rem 2rem 0 2rem
-    padding: 10px
-    font-size: 15px
-
-    &__login
-      box-shadow: 0 4px 6px #bbb
-      background-color: rgba(123, 239, 178, 0.7)
-      padding: 5px 5px 5px 5px
-      border-radius: 3px
-      -moz-border-radius: 3px
-      -webkit-border-radius: 3px
-      color: black
+    color: black
 
 .footer-home
-    background-color: rgb(163, 15, 50)
-    display: flex
-    align-content: flex-end
-    flex-wrap: wrap
-    justify-content: space-evenly
-    align-items: baseline
-    color: white
-    width: 100vw
-    font-size: 0.8rem
-    bottom: 0
-    margin-top: 2rem
+  background-color: rgb(163, 15, 50)
+  display: flex
+  align-content: flex-end
+  flex-wrap: wrap
+  justify-content: space-evenly
+  align-items: baseline
+  color: white
+  width: 100vw
+  font-size: 0.8rem
+  bottom: 0
+  margin-top: 2rem
+  position: fixed
 
 .footer-sMedia
-    display: inline-flex
-    flex-wrap: wrap
-    flex: end
+  display: inline-flex
+  flex-wrap: wrap
+  flex: end
 
 .feedback
     border: 2px solid rgba(0,0,0,0.3)
@@ -205,150 +203,174 @@ main
     padding: 10px
     
     &--error
-        color: red
+      color: red
     &--warn
-        background-color: yellow
+      background-color: yellow
     &--success
-        color: green
+      color: green
 
 
 .loginTitle
-    font-family: verdana
-    color: #4091cc
-    text-align: center
-    margin-top: 1rem
+  font-family: verdana
+  color: #4091cc
+  text-align: center
+  margin-top: 1rem
 
 .loginForm
-    display: flex
-    flex-wrap: wrap
-    justify-content: center
-    color: #4091cc
-    flex-direction: column
-    padding: 1rem
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
+  color: #4091cc
+  flex-direction: column
+  padding: 1rem
+
+.loginForm input
+  height: 1rem
+  padding: 0.3rem
 
 .btnGo
-    align-self: center
-    border: none
-    font-weight: bold
-    background-color: rgba(91, 177, 222, 0.8)
-    color: white
+  border: none
+  background-color: rgba(91, 177, 222, 0.8)
+  color: white
+  height: 2rem
+  max-width: 4rem
+  min-width: 4rem
+  border-radius: 4px
+  font-size: 0.7rem
+  font-family: Verdana, Geneva, Tahoma, sans-serif
+  font-weight: bold
+  align-self: center
+  padding-top: 0
+  box-shadow: 0 4px 6px #bbb
+  margin-top: 0.5rem
 
 
 .backButton
-    text-align: center
-    padding-top: 0.4rem
-    align-content: space-around
-    text-decoration: none
-    font-size: 0.7rem
-    margin-top: 1rem
-    align-self: center
-    border: none
-    font-family: Verdana, Geneva, Tahoma, sans-serif
-    font-weight: bold
-    background-color: rgba(91, 177, 222, 0.8)
-    color: white !important
+  text-align: center
+  padding-top: 0.4rem
+  text-decoration: none
+  font-size: 0.7rem
+  margin-top: 0.5rem
+  align-self: center
+  border: none
+  font-family: Verdana, Geneva, Tahoma, sans-serif
+  font-weight: bold
+  background-color: rgba(91, 177, 222, 0.8)
+  color: white !important
+  width: 3rem
+  max-width: 3rem
 
 .homeHeader
-    text-align: center
-    padding: 0
+  text-align: center
+  padding: 0
 
 .headerButton
-    text-align: center
-    padding: 0.4rem
-    align-content: space-around
-    text-decoration: none
-    font-size: 0.7rem
-    margin-top: 1rem
-    margin-left: 0.2rem
-    align-self: center
-    border: none
-    font-family: Verdana, Geneva, Tahoma, sans-serif
-    font-weight: bold
-    background-color: #4091cc
-    color: white
-    width: 1rem
+  font-size: 0.7rem
+  font-family: Verdana, Geneva, Tahoma, sans-serif
+  font-weight: bold
+  // background-color: #4091cc
+  color: white
 
-.home-main
-    
-
-.user
-    display: flex
-
-.home-welcome
-    margin-bottom: 0.5rem
-    color: white
-    margin: 0
-
-.user-welcome
-  background-color: #4091cc
-  opacity: 0.8
-  border-radius: 2px
-  width: 30vw
+.home-categories
+  padding-left: 3rem
+  padding-right: 3rem
 
 .smallHeader-buttons
+  height: 1.5rem
+  margin-top: -0.3rem
+  justify-content: center
 
+.user
+  display: flex
+  justify-content: center
+
+.homeHeader
+  background-color: rgba(64, 145, 204)
+
+.Search-button, select, .headerButton
+  background: none !important
+
+.home-welcome
+  margin-bottom: 0.5rem
+  color: white
+  margin: 0  
+  display: none
+  background-color: rgba(64, 145, 204)
 
 .search
-    margin-top: 1.5rem
-    margin-bottom: 0.5rem
-
-.cat_cont
-    margin-bottom: 2rem
-    margin-top: 12rem
-    
-.catPasta
-  border-top: 0 !important
-
+  // background-color: rgba(64, 145, 204)
+  height: 2rem
 
 .catTitle
-    text-align: center
-    color: #4091cc
-    margin: 1rem
-    border-top: 1px solid rgba(0,0,0,0.3)
-    padding-top: 1rem
+  font-family: Verdana, Geneva, Tahoma, sans-serif
+  font-size: 0.8rem
+  text-transform: uppercase
+  background-color: rgba(64, 145, 204, 0.8)
+  color: white !important
+  text-align: center
+  color: #4091cc
+  padding-top: 0.5rem
+  padding-bottom: 0.5rem
 
 .cat-img
-    width: 100vw
+  width: 100vw
 
+.catSlim
+  margin: 1rem 0rem 1rem 0rem
+
+.catLast
+  margin-bottom: 2rem
 
 .wrapper
-    color: #4091cc
-    font-family: verdana
-    display: flex
-    flex-direction: column
-    text-align: center
-    margin-top: 1rem
-    border-top: 0
+  color: #4091cc
+  font-family: verdana
+  display: flex
+  flex-direction: column
+  text-align: center
+  border-top: 0
+  background-image: url('https://i.pinimg.com/originals/85/5d/c4/855dc497dea9484967fb13036b8d7767.jpg')
+  background-size: cover
+  background-repeat: no-repeat
+  background-attachment: fixed
+    
 
-    &__title
-      padding-top: 1rem
+  &__title
+    padding-top: 1rem
 
-.wrapper-cont
-    margin-top: 12rem
+.wrapper_cont
+  margin-top: 6.8rem
+
+.favorites
+  margin-top: 6.8rem
     
 .wrapper__img
-    margin-top: 1rem
-    width: 100vw
+  margin-top: 1rem
 
 .fav-text
-    font-size: 12px
+  font-size: 12px
 
 .ingredients-cont
-    display: grid
-    
+  display: grid
 
-    &__ingredients
-      padding: 10px
+  &__ingredients
+    padding: 10px
 
 .ingredients-title
-    padding: 10px 0 0 0
+  padding: 10px 0 0 0
 
 .descText
-    color: black
-    text-align: justify
-    padding: 1rem
+  color: black
+  text-align: justify
+  padding: 1rem
 
 .home-logo
-    width: 100vw
+  width: 100vw
+
+.fab
+  padding-left: 0.5rem
+  padding-top: 0.3rem
     
+.recipe-video
+  width: 99vw
+  height: 300px
      
