update feature/express-app with extra literals

--- a/staff/carolina-zhou/express-app/components/duck-detail/index.sass
+++ b/staff/carolina-zhou/express-app/components/duck-detail/index.sass
@@ -25,9 +25,14 @@
 
     &__link
         margin-top: 1em
-        color: grey
+        color: white
         font-weight: bold
         text-decoration: none 
+    
+    &__back
+        margin-top: 1em
+        color: grey
+        text-decoration: none 
 
-    &__link:hover
+    &__link:hover, &__back:hover
         color: $hover-text-color
