--- a/staff/carolina-zhou/express-app/style/base-settings.sass
+++ b/staff/carolina-zhou/express-app/style/base-settings.sass
@@ -14,7 +14,7 @@ $hover-text-color: deeppink
     background-color: $secondary-bg-color
     width: 70%
     margin: 2em auto
-    padding: 30px
+    padding: 3em
     text-align: center
 
 %link
@@ -22,7 +22,7 @@ $hover-text-color: deeppink
     text-decoration: none  
 
 %text-input
-    width: 95%
+    width: 100%
     margin-top: .5em
     border: none
     outline: none
