--- a/staff/carolina-zhou/express-app/components/header/index.sass
+++ b/staff/carolina-zhou/express-app/components/header/index.sass
@@ -10,18 +10,35 @@
     &__nav
         list-style: none
         display: flex
-        justify-content: flex-end
+        flex-direction: column
+        align-items: flex-end
         padding: 0
+    
+    &__item
+        margin: 5px 15px
+        width: 13%
+        border: 1px solid $link-text-color
+        padding: 10px 0px
+    
+    &__form
+        padding: 0
+
+    &__logout
+        color: $link-text-color
+        background: none
+        border: none
+        padding: 5px 17px
+        font-size: 22px
+
+    &__message
+        font-size: 2rem
+        margin: auto
 
     &__link
         color: $link-text-color
         text-decoration: none
         margin: 15px
-        border: 1px solid $link-text-color
         padding: 5px 17px
     
-    &__link:hover
+    &__link:hover, &__logout:hover
         color: $hover-text-color
-
-    &__button
-        @extend %button
