fix style details

--- a/staff/carolina-zhou/express-app/components/header/index.sass
+++ b/staff/carolina-zhou/express-app/components/header/index.sass
@@ -12,11 +12,12 @@
         display: flex
         flex-direction: column
         align-items: flex-end
+        margin-top: 5px
         padding: 0
     
     &__item
         margin: 5px 15px
-        width: 13%
+        width: 235px
         border: 1px solid $link-text-color
         padding: 10px 0px
     
