--- a/staff/carolina-zhou/express-app/components/lang-selector/index.sass
+++ b/staff/carolina-zhou/express-app/components/lang-selector/index.sass
@@ -3,9 +3,12 @@
         list-style: none
         display: flex
         justify-content: flex-end
+        margin: 0
+        padding: 0
     
     &__lang-option
         padding: 15px
 
     &__lang-button
         @extend %button
+        font-size: 12px
