--- a/staff/jaume-villarreal/express-app/style/index.sass
+++ b/staff/jaume-villarreal/express-app/style/index.sass
@@ -1,8 +1,8 @@
-*
-    border: 1px solid black
-    padding: 10px
-    margin: 10px
-
+@import ./base-settings
+@import ./button-a
 @import ../components/header
+@import ../components/lang-selector
+@import ../components/duck-results
+@import ../components/search
 
 
