--- a/staff/jaume-villarreal/express-app/components/header/index.sass
+++ b/staff/jaume-villarreal/express-app/components/header/index.sass
@@ -1,2 +1,38 @@
 .header
-    background-color: skyblue
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    align-items: center
+    &__title
+        width: 100%
+        font-family: 'Montserrat', sans-serif
+        padding: .5rem
+        margin: 0 0 1rem 
+        background-color: #54264D
+        color: white
+        text-align: center
+        border-radius: .25rem
+    &__lang
+        width: 75%
+    &__nav
+        width: 100%
+        padding: .5rem 0
+        display: flex
+        justify-content: space-between
+        border-top: 2px solid #03A6A6
+        border-bottom: 2px solid #03A6A6
+        >ul
+            width: 100%
+            list-style: none
+            display: flex
+            justify-content: center
+            >li
+                display: flex
+                justify-content: space-between
+                margin: .5rem
+                width: 15rem
+    &__search
+        width: 100%
+        margin: 1.5rem 0 1rem
+        display: flex
+        flex-direction: column
