--- a/staff/jaume-villarreal/express-app/style/button-a.sass
+++ b/staff/jaume-villarreal/express-app/style/button-a.sass
@@ -11,9 +11,27 @@
     text-decoration: none
     padding: .5rem
     font-size: 1rem
+    outline: none
     &:hover
         background-color: #03A6A611
         font-weight: bold
     &--search
         color: white
         background-color: #03A6A6
+        &:hover
+            background-color: #03A6A6
+            color: white
+            font-weight: bold
+    &--form-user
+        width: 75%
+        background-color: #03A6A6CC
+        color: white
+        // margin-bottom: 2rem
+    &--back
+        width: 50%
+        margin: 0 auto
+        border: none
+        color: white
+        background-color: #54264DCC
+    &--logged
+        color: #03A6A6
