--- a/staff/jaume-villarreal/express-app/style/index.sass
+++ b/staff/jaume-villarreal/express-app/style/index.sass
@@ -1,8 +1,13 @@
 @import ./base-settings
 @import ./button-a
+@import ./form
 @import ../components/header
 @import ../components/lang-selector
 @import ../components/duck-results
+@import ../components/duck-item
+@import ../components/fav-button
+@import ../components/favorites
 @import ../components/search
+
 
 
