--- a/staff/jaume-villarreal/express-app/components/search/index.sass
+++ b/staff/jaume-villarreal/express-app/components/search/index.sass
@@ -4,7 +4,7 @@
     align-items: center
     width: 100%
     height: 2rem
-    color: #F85B4E
+    color: #03A6A6
     background-color: #03A6A622
     margin-bottom: .5rem
     padding: .25rem
@@ -13,3 +13,4 @@
     outline: none
     font-size: 1rem
     font-family: 'Open Sans' , sans-serif
+    text-align: center
