update styles for dusk detail

--- a/staff/jaume-villarreal/express-app/components/duck-item/index.sass
+++ b/staff/jaume-villarreal/express-app/components/duck-item/index.sass
@@ -21,6 +21,7 @@
         width:100%
     &__price
         width: 95%
+        margin-bottom: 1rem
         display: flex
         justify-content: center
         align-items: center
@@ -30,3 +31,13 @@
         border: 1px solid #54264D55
         border-radius: .25rem
         background-color: #54264D44
+    &__description
+        padding: 1rem
+        font-family: 'Open Sans', sans-serif
+        font-size: .9rem
+        border-radius: .5rem
+        border: 1px solid #03A6A688
+        background-color: #03A6A611
+        color: #03A6A6ff
+        text-align: center
+        line-height: 1.5rem
