--- a/staff/jaume-villarreal/express-app/style/index.sass
+++ b/staff/jaume-villarreal/express-app/style/index.sass
@@ -1,5 +1,6 @@
 @import ./base-settings
 @import ./button-a
+@import ./feedback
 @import ./form
 @import ../components/header
 @import ../components/lang-selector
