--- a/staff/manuel-galvez/express-app/0/components/header/index.sass
+++ b/staff/manuel-galvez/express-app/0/components/header/index.sass
@@ -1,23 +1,79 @@
-body
+header
+    display: flex
+    flex-flow: column wrap
+    padding-bottom: 3rem
+    background: #0791D0 
+    border-bottom: 2px solid #0791D0
+    position: fixed
+    top: 0
+    width: 100%
+    z-index: 10
+
+.welcome
     margin: 0
     padding: 0
-    background: #232323
-    color: #cdcdcd
-    font-family: "Avenir Next", "Avenir", sans-serif
+    margin-bottom: 2rem
+    font-size: 1.2rem
+    color: white
 
-a
-    text-decoration: none
-    color: #232323
-    transition: color 0.3s ease
+.logo
+    widht: 100%
+    height: 3rem
+    display: flex
+    justify-content: center
 
-a:hover
-    color: tomato
+    &__img
+        width: 2rem 
+        height: 2rem
+        margin: 0 .8rem
+
+        &>img
+            width: 100%
+            height: 100%
+            object-fit: cover
+            border-radius: 50%
+    &__text
+        color: white
+        margin-top: 5px
+
+.menu__option
+
+    width: 100%
+    height: 2rem
+    border: none
+    margin-bottom: 5px
+    color: white
+    background-color: #3a3a3a
+    border: 1px solid white
+    display: flex
+    justify-content: center
+    align-items: center
+    text-align: center
+
+    &>a
+        width: 100%
+        height: 100%
+        position: relative
+        width: inherit
+        color: white
+        text-decoration: none
+        font-size: 1rem
+
+.menu__signout
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 100%
+    background-color: #3a3a3a
+    color: white
+    font-size: 1rem
+    border: none
 
 #menuToggle
     display: block
     position: relative
-    top: 50px
-    left: 50px
+    top: 30px
+    left: 30px
     z-index: 1
     -webkit-user-select: none
     user-select: none
@@ -40,7 +96,7 @@ a:hover
     height: 4px
     margin-bottom: 5px
     position: relative
-    background: #cdcdcd
+    background: white
     border-radius: 3px
     z-index: 1
     transform-origin: 4px 0px
@@ -57,7 +113,7 @@ a:hover
 #menuToggle input:checked ~ span
     opacity: 1
     transform: rotate(45deg) translate(-2px, -1px)
-    background: #232323
+    background: white 
 
 #menuToggle input:checked ~ span:nth-last-child(3)
     opacity: 0
@@ -70,10 +126,12 @@ a:hover
 #menu
     position: absolute
     width: 300px
+    min-height: 500px
     margin: -100px 0 0 -50px
     padding: 50px
-    padding-top: 125px
-    background: #ededed
+    padding-bottom: 20px
+    padding-top: 150px
+    background: rgba(58,58,58, .9) 
     list-style-type: none
     -webkit-font-smoothing: antialiased
     transform-origin: 0% 0%
@@ -81,7 +139,7 @@ a:hover
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
 
 #menu li
-    padding: 10px 0
+    padding: 5px 0
     font-size: 22px
 
 #menuToggle input:checked ~ ul
