--- a/staff/manuel-galvez/express-app/0/public/style.css
+++ b/staff/manuel-galvez/express-app/0/public/style.css
@@ -1,26 +1,84 @@
-body {
+header {
+  display: flex;
+  flex-flow: column wrap;
+  padding-bottom: 3rem;
+  background: #0791D0;
+  border-bottom: 2px solid #0791D0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+}
+
+.welcome {
   margin: 0;
   padding: 0;
-  background: #232323;
-  color: #cdcdcd;
-  font-family: "Avenir Next", "Avenir", sans-serif;
+  margin-bottom: 2rem;
+  font-size: 1.2rem;
+  color: white;
 }
 
-a {
+.logo {
+  widht: 100%;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+}
+.logo__img {
+  width: 2rem;
+  height: 2rem;
+  margin: 0 0.8rem;
+}
+.logo__img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.logo__text {
+  color: white;
+  margin-top: 5px;
+}
+
+.menu__option {
+  width: 100%;
+  height: 2rem;
+  border: none;
+  margin-bottom: 5px;
+  color: white;
+  background-color: #3a3a3a;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.menu__option > a {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  width: inherit;
+  color: white;
   text-decoration: none;
-  color: #232323;
-  transition: color 0.3s ease;
+  font-size: 1rem;
 }
 
-a:hover {
-  color: tomato;
+.menu__signout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #3a3a3a;
+  color: white;
+  font-size: 1rem;
+  border: none;
 }
 
 #menuToggle {
   display: block;
   position: relative;
-  top: 50px;
-  left: 50px;
+  top: 30px;
+  left: 30px;
   z-index: 1;
   -webkit-user-select: none;
   user-select: none;
@@ -45,7 +103,7 @@ a:hover {
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-  background: #cdcdcd;
+  background: white;
   border-radius: 3px;
   z-index: 1;
   transform-origin: 4px 0px;
@@ -65,7 +123,7 @@ a:hover {
 #menuToggle input:checked ~ span {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
+  background: white;
 }
 
 #menuToggle input:checked ~ span:nth-last-child(3) {
@@ -80,10 +138,12 @@ a:hover {
 #menu {
   position: absolute;
   width: 300px;
+  min-height: 500px;
   margin: -100px 0 0 -50px;
   padding: 50px;
-  padding-top: 125px;
-  background: #ededed;
+  padding-bottom: 20px;
+  padding-top: 150px;
+  background: rgba(58, 58, 58, 0.9);
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
@@ -92,7 +152,7 @@ a:hover {
 }
 
 #menu li {
-  padding: 10px 0;
+  padding: 5px 0;
   font-size: 22px;
 }
 
@@ -100,24 +160,116 @@ a:hover {
   transform: none;
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.form {
+.login__form {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
+}
+
+.register__form {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.search__form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+.search__input {
+  width: 20rem;
+  height: 2.5rem;
+  font-size: 0.8rem;
+  padding: 0 1rem;
+}
+.search__submit {
+  position: absolute;
+  left: -9999px;
+  tabindex: -1;
+}
+
+.locale__form {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+.locale__btn {
+  width: 2.8rem;
+}
+
+.ducks {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+  padding-top: 180px;
+}
+.ducks__item {
+  display: flex;
+  padding: 1rem;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  width: 90vw;
+  height: 100vw;
+  background: #fff;
+  border-radius: 2px;
+  margin: 1rem;
+  position: relative;
+  box-shadow: 0 1px 80px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.ducks__item:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.ducks__item > a {
+  text-decoration: none;
   color: #0791D0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column nowrap;
+  text-align: center;
+}
+.ducks__img {
+  height: 80%;
+  width: 80%;
+  object-fit: cover;
+}
+
+.favorite__btn {
+  margin: 0.5rem;
+  background-color: #fff;
+  font-size: 1.5rem;
+  border: none;
+  color: #0791D0;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  max-width: 100vw;
+}
+
+.form {
+  color: #0791D0;
+  width: 100%;
+  height: 100%;
 }
 .form__input {
   width: 80%;
   height: 2rem;
   margin-top: 0.5rem;
   margin-bottom: 1rem;
+  padding: 0 1rem;
 }
 .form__input:focus {
   border: 1px solid #0791D0;
