--- a/staff/manuel-galvez/express-app/0/style/index.sass
+++ b/staff/manuel-galvez/express-app/0/style/index.sass
@@ -1,23 +1,31 @@
 @import ../components/header
+@import ../components/login
+@import ../components/register
+@import ../components/search
+@import ../components/locale
+@import ../components/duck-results
+@import ../components/duck-item
+@import ../components/fav-button
 
 *
     padding: 0
     margin: 0
     box-sizing: border-box
+    font-family: 'Roboto', sans-serif
+    max-width: 100vw
 
 
 .form
-    display: flex
-    flex-flow: column nowrap
-    align-items: center
-    justify-content: center
     color: #0791D0
+    width: 100%
+    height: 100%
 
     &__input
         width: 80% 
         height: 2rem 
         margin-top: .5rem
         margin-bottom: 1rem
+        padding: 0 1rem
 
         &:focus
             border: 1px solid #0791D0
@@ -47,6 +55,7 @@
     &--secondary
         border: 1px solid #0791D0
         color: #0791D0
+
 
 h1
     color: #0791D0
