--- a/staff/carolina-zhou/express-app-pug/components/html/index.pug
+++ b/staff/carolina-zhou/express-app-pug/components/html/index.pug
@@ -3,7 +3,8 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="ie=edge")
-    title Document
+    title Express App Pug
+    link(rel="icon" href="doge.ico" type="image/x-icon")
     link(rel="stylesheet" href="/style.css")
   body
     block content
