update register-success style and error handling

--- a/staff/jaume-villarreal/express-app/style/button-a.sass
+++ b/staff/jaume-villarreal/express-app/style/button-a.sass
@@ -33,5 +33,7 @@
         border: none
         color: white
         background-color: #54264DCC
-    &--logged
-        color: #03A6A6
+    &--register-success
+        background-color: #03A6A6CC
+        color: white
+        width: 100%
