--- a/staff/jaume-villarreal/express-app/style/index.sass
+++ b/staff/jaume-villarreal/express-app/style/index.sass
@@ -3,6 +3,7 @@
 @import ./feedback
 @import ./form
 @import ../components/header
+@import ../components/register-success
 @import ../components/lang-selector
 @import ../components/duck-results
 @import ../components/duck-item
