--- a/staff/jaume-villarreal/express-app/public/style.css
+++ b/staff/jaume-villarreal/express-app/public/style.css
@@ -57,8 +57,10 @@ html {
   color: white;
   background-color: #54264DCC;
 }
-.btn--logged {
-  color: #03A6A6;
+.btn--register-success {
+  background-color: #03A6A6CC;
+  color: white;
+  width: 100%;
 }
 
 .feedback {
@@ -190,6 +192,32 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.register-success {
+  witdh: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.register-success__box {
+  color: #03A6A6;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 95%;
+  height: 25%;
+  border: 1px solid #03A6A6;
+  border-radius: 0.5rem;
+  background-color: #03A6A611;
+  font-family: "Titillium", sans-serif;
+  font-size: 1rem;
+  padding: 1rem;
+  text-align: center;
+}
+.register-success__box > p {
+  margin-bottom: 2rem;
 }
 
 .lang-nav {
