added some sass changes and error handling with feedback

--- a/staff/felipe-fernandez/express-app/components/duck-detail/index.sass
+++ b/staff/felipe-fernandez/express-app/components/duck-detail/index.sass
@@ -3,7 +3,7 @@
     @extend %panel
 
     align-content: center
-    background-color: #D7D9DA
+    background-color: #8bbabb
     width: 60%
     height: 60%
     text-align: justify
