--- a/staff/felipe-fernandez/express-app/components/form.sass
+++ b/staff/felipe-fernandez/express-app/components/form.sass
@@ -5,7 +5,7 @@
     align-items: center
 
     >label
-        color: green
+        color: #464159
         text-align: center
         padding: 0.1rem
     >input
