--- a/staff/felipe-fernandez/express-app/style/index.sass
+++ b/staff/felipe-fernandez/express-app/style/index.sass
@@ -1,5 +1,6 @@
 @import base-settings
 @import ../components/html
+@import ../components/feedback
 @import ../components/form
 @import ../components/panel
 @import ../components/header
@@ -10,15 +11,18 @@
 @import ../components/duck-results
 @import ../components/duck-detail
 
+body 
+    background-color: #c7f0db
+    
 h1 
     text-align: center
-    font-family: 'Bree Serif', serif
+    font-family: 'Playfair Display', serif
     padding: 10px
-    color: #e17055
+    color: #464159
 
 a 
     text-decoration: none
-    color: #e17055
+    color: #464159
     font-size: 18px    
 
 li 
