--- a/staff/felipe-fernandez/express-app/components/panel.sass
+++ b/staff/felipe-fernandez/express-app/components/panel.sass
@@ -18,13 +18,15 @@
     align-items: center
     
     
-    background-color: #D7D9DA
-    font-family: 'Source Sans Pro', sans-serif
+    // background-color: #D7D9DA
+    background-color: #8bbabb
+
+    font-family: 'Playfair Display', serif
     padding: 20px
     margin: 0 auto
 
     button
-        font-family: 'Source Sans Pro', sans-serif
+        font-family: 'Playfair Display', serif
         font-size: 16px
         background-color: hsl(0, 10%, 77%)
         border-radius: 8px
