--- a/staff/felipe-fernandez/express-app/components/panel.sass
+++ b/staff/felipe-fernandez/express-app/components/panel.sass
@@ -18,7 +18,6 @@
     align-items: center
     
     
-    // background-color: #D7D9DA
     background-color: #8bbabb
 
     font-family: 'Playfair Display', serif
@@ -34,6 +33,9 @@
 
 
     button:hover 
-        background-color: white
+        background: #6b6b6b
         color: #D7D9DA
         font-weight: bold
+
+
+ 
