--- a/staff/felipe-fernandez/express-app/components/search/index.sass
+++ b/staff/felipe-fernandez/express-app/components/search/index.sass
@@ -3,7 +3,8 @@
         margin: 0 auto
         
     input
-        padding: 0.1rem
+        padding: 0.3rem
+        margin-bottom: 0.5rem
         
     @extend %panel
 
