--- a/staff/felipe-fernandez/express-app/components/register-success/index.sass
+++ b/staff/felipe-fernandez/express-app/components/register-success/index.sass
@@ -1,12 +1,7 @@
 .register-success
+
     @extend %panel
 
-    flex-direction: column
-    justify-content: center
-    align-items: center
     width: 60vw
-    height: 30vw
-    background-color: #D7D9DA
-    font-family: 'Source Sans Pro', sans-serif
-    padding: 20px
-    margin: 0 auto
+    font-family: 'Playfair Display', serif
+    text-align: center
