--- a/staff/felipe-fernandez/express-app/style/index.sass
+++ b/staff/felipe-fernandez/express-app/style/index.sass
@@ -7,6 +7,7 @@
 @import ../components/lang-selector
 @import ../components/login
 @import ../components/register
+@import ../components/register-success
 @import ../components/search
 @import ../components/duck-results
 @import ../components/duck-detail
@@ -15,6 +16,12 @@ body
     background-color: #c7f0db
     
 h1 
+    text-align: center
+    font-family: 'Playfair Display', serif
+    padding: 10px
+    color: #464159
+    
+h2
     text-align: center
     font-family: 'Playfair Display', serif
     padding: 10px
