--- a/staff/jaume-villarreal/express-app-pug/components/search/index.pug
+++ b/staff/jaume-villarreal/express-app-pug/components/search/index.pug
@@ -1,4 +1,4 @@
 mixin search(path, search)
     form(action=path)
-        input(type="text" name="q" value="")
-        button= search
+        input.search-box(type="text" name="q" value="")
+        button.btn.btn--search= search
