--- a/staff/jaume-villarreal/express-app-pug/style/index.sass
+++ b/staff/jaume-villarreal/express-app-pug/style/index.sass
@@ -1,8 +1,15 @@
-*
-    border: 1px solid black
-    padding: 10px
-    margin: 10px
-
+@import ./base-settings
+@import ./button-a
+@import ./feedback
+@import ./form
 @import ../components/header
+@import ../components/register-success
+@import ../components/lang-selector
+@import ../components/duck-results
+@import ../components/duck-item
+@import ../components/fav-button
+@import ../components/favorites
+@import ../components/search
+
 
 
