--- a/staff/jaume-villarreal/express-app-pug/components/home/index.pug
+++ b/staff/jaume-villarreal/express-app-pug/components/home/index.pug
@@ -8,27 +8,31 @@ include ../duck-detail/index
 
 block content
     header.header
-      +lang-selector(selectLangPath)
+      h1.header__title Express Duck
+      div.header__lang
+        +lang-selector(selectLangPath)
       
       if(name)
-        nav
-          h1
+        nav.header__nav
+          ul.header__nav--logged
+            li.form__logged
+              form.form__logged(method="post" action=favoritePath)
+                button.btn.btn--logged= favorite
+            li.form__logged
+              form.form__logged(method="post" action=signOutPath)
+                button.btn.btn--logged= signOut
+        h2.header__title--username
             | #{hello}, #{name}!
-          ul
-            li
-              a(href=favoritePath)= favorite
-            li
-              form(method="post" action=signOutPath)
-                button= signOut
       else
-        nav
-            ul
-            li
-                a(href=signUpPath)= signUp
-            li
-                a(href=signInPath)= signIn
-      +search(searchPath, search)
+        nav.header__nav
+          ul  
+            li.form__logged
+                a.btn.btn--logged(href=signUpPath)= signUp
+            li.form__logged
+                a.btn.btn--logged(href=signInPath)= signIn
+      div.header__search
+        +search(searchPath, search)
       if (ducks)
         +duck-results(ducks)
       if (duck)
-        +duck-detail(duck)
+        +duck-detail(duck , searchFromDetailPath , query)
