--- a/staff/jaume-villarreal/express-app-pug/components/html/index.pug
+++ b/staff/jaume-villarreal/express-app-pug/components/html/index.pug
@@ -3,7 +3,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="ie=edge")
-    title Document
-    link(rel="stylesheet" href="/style.css")
-  body
+    title Express Duck
+    link(rel="stylesheet" href="/style.css" type='text/css')
+  body.wrapper
     block content
