added feedback and goBack in details

--- a/staff/felipe-fernandez/express-app-pug/components/home/index.pug
+++ b/staff/felipe-fernandez/express-app-pug/components/home/index.pug
@@ -27,4 +27,4 @@ block content
      if (ducks)
        +duck-results(ducks)
      if (duck)
-       +duck-detail(duck)
+       +duck-detail(duck , goBackToResults , query)
