--- a/staff/felipe-fernandez/express-app-pug/components/login/index.pug
+++ b/staff/felipe-fernandez/express-app-pug/components/login/index.pug
@@ -1,5 +1,6 @@
-
 extends ../html/index
+
+include ../feedback/index
 
 block content
     h1= signIn
@@ -12,3 +13,5 @@ block content
         input(type="password" name="password")
       button= signIn
     a(href=goBackPath)= goBack
+    if(error)
+      +feedback(error)
