--- a/staff/felipe-fernandez/express-app-pug/components/register/index.pug
+++ b/staff/felipe-fernandez/express-app-pug/components/register/index.pug
@@ -1,4 +1,5 @@
 extends ../html/index
+include ../feedback/index
 
 block content
     h1= signUp
@@ -20,3 +21,5 @@ block content
         input(type="password" name="repassword")
       button= signUp
     a(href=goBackPath)= goBack
+    if(error)
+      +feedback(error)
