added some sass

--- a/staff/felipe-fernandez/express-app-pug/components/home/index.sass
+++ b/staff/felipe-fernandez/express-app-pug/components/home/index.sass
@@ -1,2 +1,18 @@
 .header
-    background-color: skyblue
+     
+
+    @extend %panel
+
+    display: flex
+    flex-wrap: wrap
+    width: 60%
+    
+.navigator
+    display: flex
+    justify-content: space-between
+    width: 100%
+    
+h1 
+    display: block
+    
+   
