--- a/staff/felipe-fernandez/express-app-pug/style/index.sass
+++ b/staff/felipe-fernandez/express-app-pug/style/index.sass
@@ -1,8 +1,29 @@
-*
-    border: 1px solid black
+@import base-settings
+
+@import ../components/feedback
+@import ../components/form
+@import ../components/panel
+@import ../components/home
+@import ../components/lang-selector
+@import ../components/login
+@import ../components/register
+@import ../components/search
+@import ../components/duck-results
+@import ../components/duck-detail
+
+body 
+    background-color: #c7f0db
+    
+h1 
+    text-align: center
+    font-family: 'Playfair Display', serif
     padding: 10px
-    margin: 10px
+    color: #464159
 
-@import ../components/header
+a 
+    text-decoration: none
+    color: #464159
+    font-size: 18px    
 
-
+li 
+    list-style-type:  none
